--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles.css/index.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class="main-header">Yoga For Beginners</h1>
+        <nav>
+            <ul>
+                <li class="nav-item"><a href="#yoga-studios">Yoga Studios</a></li>
+                <li class="nav-item"><a href="#self-practice">Self Practice</a></li>
+                <li class="nav-item"><a href="#yoga-philosophy">Yoga Philosophy</a></li>
+            </ul>
+        </nav>
+
+    </header>
 </body>
+
+
+<main>
+
+    <section class="yoga-studios" id="yoga-studios">
+
+
+
+    </section>
+
+
+
+    <section id="self-practice" id="self-practice">
+
+
+
+
+    </section>
+
+
+
+    <section id="yoga-philosophy" id="self-practice">
+
+
+
+    </section>
+
+
+
+</main>
 </html>
