--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css/index.css">
-    <title>Document</title>
+    <title>Yoga For Beginners</title>
 </head>
+
+
+
 <body>
     <header>
-        <h1 class="main-header">Yoga For Beginners</h1>
+        <h1>Yoga For Beginners</h1>
         <nav>
             <ul>
                 <li class="nav-item"><a href="#yoga-studios">Yoga Studios</a></li>
@@ -26,7 +29,7 @@
 <main>
 
     <section class="yoga-studios" id="yoga-studios">
-
+       <h3>Yoga Studios</h3>
 
 
     </section>
@@ -34,7 +37,7 @@
 
 
     <section id="self-practice" id="self-practice">
-
+       <h3>Self Practice</h3>
 
 
 
@@ -42,8 +45,8 @@
 
 
 
-    <section id="yoga-philosophy" id="self-practice">
-
+    <section id="yoga-philosophy" id="yoga-philosophy">
+        <h3>Yoga Philosophy</h3>
 
 
     </section>
