--- a/index.html
+++ b/index.html
@@ -30,14 +30,28 @@
 
     <section class="yoga-studios" id="yoga-studios">
        <h3>Yoga Studios</h3>
+       <p> Yoga studios are a fantastic place to start your yoga journey. They will have a range of classes for all levels.<br>
+        Most studios offer a beginner yoga class where you can learn the fundamentals of a yoga practice consisting of the following basic principls. <br>
+
+            <ul>
+                <li> Basic yoga postures</li>
+                <li> Basic Alignments</li>
+                <li> Breath fundamentals</li>
+            </ul>
+
+
+
+       </p>
 
 
     </section>
 
 
 
-    <section id="self-practice" id="self-practice">
+    <section class="self-practice" id="self-practice">
        <h3>Self Practice</h3>
+        <p> Yoga studios are a fantastic place to start your yoga journey. They will have a range of classes for all levels.<br>
+        Most studios offer a beginner yoga class where you can learn the fundamentals of a yoga practice consisting of the following basic principls. <br>
 
 
 
@@ -45,9 +59,11 @@
 
 
 
-    <section id="yoga-philosophy" id="yoga-philosophy">
+    <section class="yoga-philosophy" id="yoga-philosophy">
         <h3>Yoga Philosophy</h3>
-
+        <p> Yoga studios are a fantastic place to start your yoga journey. They will have a range of classes for all levels.<br>
+        Most studios offer a beginner yoga class where you can learn the fundamentals of a yoga practice consisting of the following basic principls. <br>
+    
 
     </section>
 
