images and css update

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1>Yoga For Beginners</h1>
         <nav>
             <ul>
-                <li class="nav-item"><a href="#yoga-studios">Yoga Studios</a></li>
-                <li class="nav-item"><a href="#self-practice">Self Practice</a></li>
-                <li class="nav-item"><a href="#yoga-philosophy">Yoga Philosophy</a></li>
+                <li> <a href="#yoga-studios">Yoga Studios</a></li>
+                <li> <a href="#self-practice">Self Practice</a></li>
+                <li> <a href="#yoga-philosophy">Yoga Philosophy</a></li>
             </ul>
         </nav>
 
@@ -39,12 +39,14 @@
                 <li> Breath fundamentals</li>
             </ul>
 
-
-
        </p>
-
+       
 
     </section>
+
+    <img class="yoga-image" src="images/yoga-studio.jpeg" alt="a photo of a yoga studio" title="image of a yoga studio">
+
+    <img class="yoga-shala" src="images/yoga-studio2.jpg" alt="a photo of a yoga studio" title="image of a yoga studio">
 
 
 
@@ -57,6 +59,7 @@
 
     </section>
 
+    
 
 
     <section class="yoga-philosophy" id="yoga-philosophy">
